--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="nav_box">
                 <ul class="main clearfix">
-                    <li><a href="#">NEW</a>
+                    <li><a href="#"><span>NEW</span></a>
                     <ul class="sub_menu">
                         <li><a href="#">APPARELS</a></li>
                         <li><a href="#">UNDERWEAR</a></li>
@@ -104,7 +104,7 @@
                         <li><a href="#">WOMEN</a></li>
                     </ul>
                     </li>
-                    <li><a href="#">SALE</a>
+                    <li><a href="#"><span>SALE</span></a>
                     <ul class="sub_menu">
                         <li><a href="#">GIFT PLAN</a></li>
                         <li><a href="#">STANDARDS</a></li>
@@ -114,6 +114,16 @@
                 </ul>
             </div>
         </div>
+        <!-- <div class="login">
+            <li><a href="#">
+                <img src="images/user login.png" alt="로그인">
+            </a></li>
+        </div>
+        <div class="search">
+            <li><a href="#">
+                <img src="images/search.png" alt="검색">
+            </a></li>
+        </div> -->
     </header>
     <!--이미지 슬라이드--> 
    <div class="slide-wrap">
@@ -226,15 +236,16 @@
                     </div>
 
                     </div>
+                
+                    <!-- 스크롤바 -->
+                    <div class="swiper-scrollbar"></div>
 
                 </div>
 
                     <!-- 화살표, 필요 없으니 제거 -->
                     <!--<div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div> -->
-                    <!-- 스크롤바 -->
 
-                    <div class="swiper-scrollbar"></div>
                 </div>
         <section class="collection_banner">
                 <div class="flex justify-between">
@@ -280,9 +291,6 @@
                         <div class="item2">
                             <a href="#">
                                 <img src="images/best2.png" alt="베스트2">
-                                <!-- <i class="heart_icon">
-                                    <img src="images/heart11.png" alt="하트티콘">
-                                </i> -->
                             </a>
                             <div class="best2_title">남성 레귤러핏 로고 스트레치 반팔 티셔츠 <p>KRW 45,000</p></div>
                         </div>
@@ -291,22 +299,12 @@
                                 <img src="images/best3.png" alt="베스트3">
                             </a>
                             <div class="best3_title">(UNISEX) 릴렉스핏 코튼 로고 반팔 티셔츠 <p>KRW 45,000</p></div>
-                            <!-- <div class="heart3_icon">
-                                <li><a href="#">
-                                    <img src="images/heart11.png" alt="하트티콘3">
-                                </a></li>
-                            </div> -->
                         </div>
                         <div class="item4">
                             <a href="#">
                                 <img src="images/best4.png" alt="베스트4">
                             </a>
                             <div class="best4_title">남성 레귤러핏 90’S 라이트 블루 데님 재킷 <p>KRW 199,000</p></div>
-                            <!-- <div class="heart4_icon">
-                                <li><a href="#">
-                                    <img src="images/heart11.png" alt="하트티콘4">
-                                </a></li>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -357,57 +355,48 @@
                 </div>
             </div>
             <div class="prev2">
-            <div class="flex justify-between">
-
-                    <!-- 슬라이드 박스로 구분지어 묶어 놓는 것이 좋습니다 -->
-                <div class="slide-box-2">
-                    <!-- 슬라이더 메인 컨테이너 -->
-                <div class="swiper2">
-                <div class="swiper-wrapper2">
-                        <!-- 슬라이드 -->
-                        <div class="swiper-slide slide-1">
+                        <div class="item1">
                             <a href="#">
                                 <img src="images/prev2.png" alt="예시1">
                             </a>
-                          <div class="item1_box">
-                            <span>여성 모던 코튼 AF 브라렛</span>
-                            <span>KRW 79,000</span>
-                          </div>
                         </div>
-                        <div class="swiper-slide slide-2">
+                        <div class="item1_box">
+                            <span>여성 모던 코튼 AF 브라렛</span>
+                            <p>KRW 79,000</p>
+                        </div>
+
+                        <div class="item2">
                             <a href="#">
                                 <img src="images/prev3.png" alt="예시2">
                             </a>
                           <div class="item2_box">
                             <span>여성 액티브 아이콘 크롭 반팔 티셔츠 </span>
-                            <span>KRW 99,000</span>
+                            <p>KRW 99,000</p>
                           </div>
                         </div>
-                        <div class="swiper-slide slide-3">
+
+                        <div class="item3">
                             <a href="#">
                                 <img src="images/prev4.png" alt="예시3">
                             </a>
                           <div class="item3_box">
                             <span>여성 액티브 아이콘 무아레 프린트 우븐 쇼츠</span>
-                            <span>KRW 119,000</span>
+                            <p>KRW 119,000</p>
                           </div>
                         </div>
+
+                        <div class="item4">
+                            <a href="#">
+                                <img src="images/prev5.png" alt="예시4">
+                            </a>
+                          <div class="item4_box">
+                            <span>여성 액티브 아이콘 7/8 우븐 팬츠</span>
+                            <p>KRW 129,000&nbsp;KRW 90,300&nbsp;30% 할인</p>
+                          </div>
+                        </div>
+
                 </div>
-                </div>
-                    <div class="item5_wrapper">
-                    <div class="item5">
-                        <a href="#">
-                            <img src="images/prev5.png" alt="예시4">
-                        </a>
-                    </div>
-                    <div class="item5_box">
-                        <li>여성 액티브 아이콘 7/8 우븐 팬츠 <p>KRW 129,000&nbsp;KRW 90,300&nbsp;30% 할인</p></li>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </section>
+            </section>
     <section class="look_con">
         <div class="lookbook_wrap">
             <div class="look1 clearfix">
